--- a/all/views/dashboard.ejs
+++ b/all/views/dashboard.ejs
@@ -23,7 +23,7 @@
   
         </div>
 <% if(watchlist.length==0){ %>
-    <h1>Your WatchList is Empty. Start Adding Now!</h1>
+    <h1 style="color: white">Your WatchList is Empty. Start Adding Now!</h1>
 <% }else{ %>
 
 
