--- a/all/views/partials/header.ejs
+++ b/all/views/partials/header.ejs
@@ -126,33 +126,30 @@
 
 
 
-
-               
-
-                 <div class="container">
-
-
-      <form class="form-inline" action="/get" method="POST" >
-        <div class="search col-md-8 col-sm-8 col-xs-8">
-          <label class="sr-only" for="inlineFormInputName2">Name</label>
-          <input id="myinp" type="text" name="name"class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Search Movies And Tv Shows" required>
-        </div>
-        <div class="search col-md-2 col-sm-2 col-xs-2">
-          <label class="sr-only" for="inlineFormInputGroupUsername2">Preferance</label>
-          <div class="input-group mb-2 mr-sm-2">
-              <select class="form-control" id="sel1" name="selval" >
-                  <option>Movies</option>
-                  <option>Tv-Shows</option>
-                </select>
-           
-          </div>
-        
-        
-          
-          
-        </div>
-        <div class="search col-md-2 col-sm-2 col-xs-2"><button type="submit" class="btn  btn-primary">Let's Go!</button></div>
-        </form>
-
+<div class="container">
+  <form class="form-inline" action="/get" method="POST" >
+    <div class="search col-md-8 col-sm-8 col-xs-8">
+      <label class="sr-only" for="inlineFormInputName2">Name</label>
+      <input style="background:  black ; color:white" id="myinp" type="text" name="name"class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Search Movies And Tv Shows" required>
+    </div>
+    <div class="search col-md-2 col-sm-2 col-xs-2">
+      <label class="sr-only" for="inlineFormInputGroupUsername2">Preferance</label>
+      <div class="input-group mb-2 mr-sm-2">
+          <select class="form-control" id="sel1" name="selval" style="background: black; color: white" >
+              <option>Movies</option>
+              <option>Tv-Shows</option>
+            </select>
+       
+      </div>
+    
+    
+      
+      
+    </div>
+    <div class="search col-md-2 col-sm-2 col-xs-2"><button type="submit" class="btn submitsearch">Let's Go!</button></div>
+    </form>
+<style>
+  
+</style>
 
 <hr class="style-one">
