--- a/all/views/discover.ejs
+++ b/all/views/discover.ejs
@@ -135,7 +135,7 @@
   <div class="search col-md-2 col-sm-2">
     <label class="sr-only" for="inlineFormInputGroupUsername2">Preferance</label>
     <div class="input-group mb-2 mr-sm-2">
-        <select class="form-control" id="sel1" name="selval" >
+        <select class="form-control" id="sel1" name="selval" style="background: black; color: white" >
             <option>Movies</option>
             <option>Tv-Shows</option>
           </select>
@@ -156,7 +156,7 @@
 <div class="search col-md-2 col-sm-2">
 <label class="sr-only" for="inlineFormInputGroupUsername2">Preferance</label>
 <div class="input-group mb-2 mr-sm-2">
-  <select class="form-control" id="sel1" name="genre" >
+  <select class="form-control" id="sel1" name="genre" style="background: black; color: white">
       <option>Action</option>
       <option>Adventure</option>
       <option>Animation</option>
@@ -180,7 +180,7 @@
 <div class="search col-md-2 col-sm-2" >
 <label class="sr-only" for="inlineFormInputGroupUsername2">Preferance</label>
 <div class="input-group mb-2 mr-sm-2">
-  <select class="form-control" id="sel1" name="secpref" >
+  <select class="form-control" id="sel1" name="secpref" style="background: black; color: white" >
       <option>popularity.desc</option>
       <option>popularity.asc</option>
       <option>release_date.asc</option>
@@ -196,7 +196,7 @@
 </div>
 
 </div>
-<div class="search col-md-2 col-sm-2 col-xs-2"><button type="submit" class="btn  btn-primary">Let's Go!</button></div>
+<div class="search col-md-2 col-sm-2 col-xs-2"><button type="submit" class="btn  submitsearch">Let's Go!</button></div>
 
 </form></div>
     
