--- a/all/views/showPeople.ejs
+++ b/all/views/showPeople.ejs
@@ -8,26 +8,45 @@
                 <h1>
                     <%= item.name %>
                 </h1>
-                <h2>Birthday :
-                    <%= item.birthday %>
-                </h2>
-                <h2>Place Of Birth :<br>
-                    <%= item.place_of_birth %>
-                </h2>
-                <% if(item.homepage==null){ %>
+                <% if(item.birthday==null){ %>
                     <% } else{ %>
-                        <h3>
-                            <a style="color: white" href="<%= item.homepage %>">Visit
-                                <%= item.name %>'s Website</a>
-                        </h3>
+
+                        <h2>Birthday :
+                            <%= item.birthday %>
+                        </h2>
                         <% } %>
-                        
+
+                            <% if(item.place_of_birth==null){ %>
+                                <% } else{ %>
+
+                                    <h2>Place Of Birth :
+                                        <br>
+                                        <%= item.place_of_birth %>
+                                    </h2>
+                                    <% } %>
+
+
+
+                                        <% if(item.homepage==null){ %>
+                                            <% } else{ %>
+                                                <h3>
+                                                    <a style="color: white" href="<%= item.homepage %>">Visit
+                                                        <%= item.name %>'s Website</a>
+                                                </h3>
+                                                <% } %>
+
             </div>
         </div>
+
+        <% if(item.biography==null){ %>
+            <% } else{ %>
+
         <h2>Biography :-</h2>
         <p class="overview" style="font-size:1.5em">
             <%= item.biography %>
         </p>
+        <% } %>
+
     </div>
     </div>
     <div class="container">
@@ -39,11 +58,12 @@
                         <% } else{ %>
                             <div class="col-sm-6 col-md-3 col-lg-3">
                                 <form action="/getmov" method="POST">
-                                <input type="image" name="movnm" value="<%= credit.id %>"  src="https://image.tmdb.org/t/p/w500<%= credit.poster_path %>" style="width: 100%">
-                                <h3 class="cast-name" style="text-align: center; ">
-                                    <%= credit.title %>
-                                </h3>
-                            </form>
+                                    <input type="image" name="movnm" value="<%= credit.id %>" src="https://image.tmdb.org/t/p/w500<%= credit.poster_path %>"
+                                        style="width: 100%">
+                                    <h3 class="cast-name" style="text-align: center; ">
+                                        <%= credit.title %>
+                                    </h3>
+                                </form>
                             </div>
                             <% } %>
                                 <%  })  %>
