Fixed form submission bug

--- a/all/views/discover.ejs
+++ b/all/views/discover.ejs
@@ -217,15 +217,12 @@
                   <div class="col-sm-6 col-md-4 col-lg-4">
                     
                     
-                      <form action="/getmov" method="POST">
+                    <form action="/getmov" method="POST">
                        
-                        <input type="image" name="movnm" value="<%= movie.id %>"  src="https://image.tmdb.org/t/p/w500<%= movie.poster_path %>" style="width: 100%">
-              
-                
-                      <h3 class="mt-name"><%= movie.title %></h3>
-                     
-           
-                    </form>
+
+                      <button type="submit" style="padding: 0" name="movnm" value="<%= movie.id %>"><img src="https://image.tmdb.org/t/p/w500<%= movie.poster_path %>" style="width: 100%" alt="SomeAlternateText"></button>
+                    <h3 class="mt-name" style="text-align: center"><%= movie.title %></h3>
+                  </form>
                   
                    
                        
