--- a/all/views/famous.ejs
+++ b/all/views/famous.ejs
@@ -8,15 +8,28 @@
                         <% if(person.profile_path==null){ %>
                             <% } else{ %>
                                 <div class="col-sm-6 col-md-4 col-lg-3">
-                                    <form action="/getpeople" method="POST">
-                                        <!-- change in these lines  -->
-                                        <input type="image" name="personName" value="<%= person.id %>" src="https://image.tmdb.org/t/p/w500<%= person.profile_path %>"
-                                            style="width: 100%">
+                               
 
+                                    <form action="/getpeople" method="POST">
+                       
+                        
+              
+                                        <button type="submit" style="padding: 0" name="personName" value="<%= person.id %>"><img src="https://image.tmdb.org/t/p/w500<%= person.profile_path %>" style="width: 100%" alt="SomeAlternateText"></button>
                                         <h3 class="mt-name">
                                             <%= person.name %>
                                         </h3>
+                                  
+                  
+                  
+                  
+                           
                                     </form>
+
+
+
+
+
+
                                 </div>
                                 <% } %>
                                     <%  })  %>
