--- a/all/views/trending.ejs
+++ b/all/views/trending.ejs
@@ -10,24 +10,22 @@
                             <div>
                                 <% if(movie.poster_path==null){ %>
                                    
-                                    
+             
                                     <form action="/getmov" method="POST">
+                       
 
-                                        
-                                        <input type="image" name="movnm" value="<%= movie.id %>" src="https://image.tmdb.org/t/p/w500<%= movie.profile_path %>" alt="">
+                                        <button type="submit" style="padding: 0" name="movnm" value="<%= movie.id %>"><img src="https://image.tmdb.org/t/p/w500<%= movie.profile_path %>" style="width: 100%" alt="SomeAlternateText"></button>
                                    
                                     </form>
                                     <% } else{ %>
                                      
                                         <% if(type=='movie'){ %>
-                                                 <form action="/getmov" method="POST" >
+                             
+                                        <form action="/getmov" method="POST">
+                       
 
-                                    
-                                        
-                                     
-                                        
-                                            <input type="image" name="movnm" value="<%= movie.id %>" src="https://image.tmdb.org/t/p/w500<%= movie.poster_path %>" alt="" style="height: 100%; width: 100%">
-                                        
+                                            <button type="submit" style="padding: 0" name="movnm" value="<%= movie.id %>"><img src="https://image.tmdb.org/t/p/w500<%= movie.poster_path %>" style="width: 100%" alt="SomeAlternateText"></button>
+                                       
                                         </form>
                                     <% }else{ %>
     <form action="/get-tv" method="POST" >
