--- a/all/views/dashboard.ejs
+++ b/all/views/dashboard.ejs
@@ -48,16 +48,13 @@
                                                         <div class="col-sm-6 col-md-4 col-lg-4">
                                                           
                                                           
-                                                            <form action="/getmov" method="POST">
-                                                             
-                                                              <input type="image" name="movnm" value="<%= wish.id %>"  src="https://image.tmdb.org/t/p/w500<%= wish.poster_path %>" style="width: 100%">
-                                                    
-                                                      
+                                   
+                                                          <form action="/getmov" method="POST">
+                       
+
+                                                            <button type="submit" style="padding: 0" name="movnm" value="<%= wish.id %>"><img src="https://image.tmdb.org/t/p/w500<%= wish.poster_path %>" style="width: 100%" alt="SomeAlternateText"></button>
                                                             <h3 class="mt-name"><%= wish.title %></h3>
-                                                           
-                                                 
-                                                          </form>
-                                                        
+                                                        </form>
                                                          
                                                              
                                       
@@ -90,17 +87,15 @@
                         <div class="col-sm-6 col-md-4 col-lg-4">
                           
                           
-                            <form action="/get-tv" method="POST">
-                       
-                        <input type="image" name="showname" value="<%= show.id %>"  src="https://image.tmdb.org/t/p/w500<%= show.poster_path %>" style="width: 100%">
-                            <h3 class="mt-name"><%= show.name %></h3>
-                           
-                      
-                      
-                          </form>
+                        
                         
                           
-                             
+                          <form action="/get-tv" method="POST">
+                       
+
+                            <button type="submit" style="padding: 0" name="showname" value="<%= show.id %>"><img src="https://image.tmdb.org/t/p/w500<%= show.poster_path %>" style="width: 100%" alt="SomeAlternateText"></button>
+                            <h3 class="mt-name"><%= show.name %></h3>
+                        </form>
       
                        
       
