--- a/all/views/index.ejs
+++ b/all/views/index.ejs
@@ -18,12 +18,9 @@
                     
                       <form action="/getmov" method="POST">
                        
-                        <input type="image" name="movnm" value="<%= movie.id %>"  src="https://image.tmdb.org/t/p/w500<%= movie.poster_path %>" style="width: 100%">
-              
-                
+
+                        <button type="submit" style="padding: 0" name="movnm" value="<%= movie.id %>"><img src="https://image.tmdb.org/t/p/w500<%= movie.poster_path %>" style="width: 100%" alt="SomeAlternateText"></button>
                       <h3 class="mt-name" style="text-align: center"><%= movie.title %></h3>
-                     
-           
                     </form>
                   
                    
