--- a/all/views/show.ejs
+++ b/all/views/show.ejs
@@ -77,10 +77,14 @@
                                   
                                          <% } else{ %>
                                           <div class="col-sm-6 col-md-3 col-lg-3">
-                                                      <form action="/getpeople" method="POST">
-                                                      <input type="image" name="personName" value="<%= cast.id %>"  src="https://image.tmdb.org/t/p/w500<%= cast.profile_path %>" style="width: 100%">
-                                              <h3 class="cast-name"><%= cast.name %></h3>
-                                          </form>
+                                          
+
+                                          <form action="/getpeople" method="POST">
+                                                <button type="submit" style="padding: 0" name="personName" value="<%= cast.id %>"><img src="https://image.tmdb.org/t/p/w500<%= cast.profile_path %>" style="width: 100%" alt="SomeAlternateText"></button>
+                                                <h3 class="cast-name"><%= cast.name %></h3>
+                                            </form>
+                                        
+
                                           </div>
                                     <% } %>
                          <%  })  %>
