--- a/all/views/showPeople.ejs
+++ b/all/views/showPeople.ejs
@@ -57,13 +57,16 @@
                     <% if(credit.poster_path==null){ %>
                         <% } else{ %>
                             <div class="col-sm-6 col-md-3 col-lg-3">
+                              
+
                                 <form action="/getmov" method="POST">
-                                    <input type="image" name="movnm" value="<%= credit.id %>" src="https://image.tmdb.org/t/p/w500<%= credit.poster_path %>"
-                                        style="width: 100%">
+                                    <button type="submit" style="padding: 0" name="movnm" value="<%= credit.id %>"><img src="https://image.tmdb.org/t/p/w500<%= credit.poster_path %>" style="width: 100%" alt="SomeAlternateText"></button>
                                     <h3 class="cast-name" style="text-align: center; ">
                                         <%= credit.title %>
                                     </h3>
                                 </form>
+
+
                             </div>
                             <% } %>
                                 <%  })  %>
