--- a/all/views/showtv.ejs
+++ b/all/views/showtv.ejs
@@ -70,14 +70,16 @@
                                    <% } else{ %>
                                     <div class="col-sm-6 col-md-3 col-lg-3">
 
-                                                <form action="/getpeople" method="POST">
+                         
 
-                                                      <input type="image" name="personName" value="<%= cast.id %>" src="https://image.tmdb.org/t/p/w500<%= cast.profile_path %>"
-                                                            style="width: 100%">
+                                                <form action="/getpeople" method="POST">
+                       
+
+                                                      <button type="submit" style="padding: 0" name="personName" value="<%= cast.id %>"><img src="https://image.tmdb.org/t/p/w500<%= cast.profile_path %>" style="width: 100%" alt="SomeAlternateText"></button>
                                                       <h3 class="cast-name" style="text-align: center">
                                                             <%= cast.name %>
                                                       </h3>
-                                                </form>
+                                                  </form>
                                           </div>
                               <% } %>
                    <%  })  %>
