--- a/all/views/partials/loginFooter.ejs
+++ b/all/views/partials/loginFooter.ejs
@@ -5,7 +5,7 @@
     
       <div class="col-lg-6 col-md-6 col-sm-6" style="padding-left:20px;">
         <div style="width: 20%; margin: auto; margin-top: 10%">
-           <h4><span class="glyphicon glyphicon-home" aria-hidden="true" style="color: antiquewhite"></span><a href="/home" style="color: white"> Home</a></h4> 
+          <h4><span class="glyphicon glyphicon-home" aria-hidden="true" style="color: antiquewhite"></span><a href="/trending-movies/1" style="color: white"> Home</a></h4> 
           <h4><span class="glyphicon glyphicon-facetime-video" aria-hidden="true" style="color: antiquewhite"></span><a href="/trending-movies/1" style="color: white"> Movies</a></h4>  
           <h4><span class="glyphicon glyphicon-film" aria-hidden="true" style="color: antiquewhite"></span><a href="/trending-tvshows/1" style="color: white"> TV Shows</a></h4>  </div>
         
